# ai-performance-engineering

./: .gitmodules  README.md
code/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  arch_config.py  benchmark.py  conftest.py  mcp.json  ncu_template.ini  profile.sh  pyproject.toml  pytest.ini  requirements_latest.txt  run_all_tests.sh  setup.sh  sitecustomize.py  usercustomize.py  verify_cutlass.py  verify_nvlink.py  verify_pytorch.py
code/ch01/: baseline_guided_decoding.py  baseline_guided_decoding_math.py  baseline_ilp_basic.py  baseline_performance.py  expectations_2x_b200.json  expectations_b200.json  optimized_guided_decoding.py  optimized_guided_decoding_math.py  optimized_ilp_basic.py  optimized_performance.py  optimized_performance_fp16.py  optimized_performance_fusion.py
code/ch02/: README.md  baseline_cublas.py  baseline_grace_coherent_memory.py  baseline_memory_transfer.py  expectations_b200.json  memory_transfer_nvlink_demo.cu  memory_transfer_nvlink_demo.py  memory_transfer_pcie_demo.cu  memory_transfer_pcie_demo.py  memory_transfer_zero_copy_demo.cu  memory_transfer_zero_copy_demo.py  optimized_cublas.py  optimized_grace_coherent_memory.py  optimized_memory_transfer.py  optimized_memory_transfer_nvlink.cu  uma_memory_utils.py
code/ch03/: README.md  baseline_docker.py  baseline_gemm.py  baseline_kubernetes.py  baseline_numa_unaware.py  baseline_rack_prep.py  expectations_b200.json  green_context_demo.py  optimized_docker.py  optimized_gemm.py  optimized_kubernetes.py  optimized_numa_unaware.py  optimized_rack_prep.py  power_perf_watt_tool.py
code/ch04/: Makefile  README.md  bandwidth_benchmark_suite_8gpu.py  bandwidth_benchmark_suite_multigpu.py  barrier_straggler.py  baseline_bandwidth_benchmark_suite_multigpu.py  baseline_continuous_batching.py  baseline_continuous_batching_multigpu.py  baseline_nccl.py  (+121 more)
code/labs/custom_vs_cublas/cutlass_gemm/: CMakeLists.txt  __init__.py  build.sh  cutlass_gemm.cu
docs/: appendix.md
(+1807 files in other folders)
